--- a/css/style.css
+++ b/css/style.css
@@ -1,237 +1,366 @@
-/* CSS Reset */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,300&display=swap');
+html{
+    scroll-behavior: smooth;
+
+}
+
+.increase{
+font-size: 26px;
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
-/* CSS variables */
-:root {
-
-    --navbar-height: 59px;
-}
-
-/* Navigation bar */
-#navbar {
-    display: flex;
-    align-items: center;
-    position: sticky;
-    top: 0px;
-}
-
-#navbar::before {
-    content: "";
-    background-color: black;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    z-index: -1;
-    opacity: 0.4;
-    top: 0px;
-    left: 0px;
-}
-
-/* Navigation bar: Logo & Image */
-#logo {
-    margin: 10px 34px;
-}
-  
-#logo img {
-    height: 100px;
-    margin: -8px 0px;
-}
-
-#navbar ul {
+.Logo {
+    width: 20%;
     display: flex;
     justify-content: center;
-    margin: 5px 220px;
+    align-items: center;
+
 }
 
-#navbar ul li {
+.Logo img {
+    width: 60%;
+    border-radius: 50px;
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+    cursor: pointer;
+    
+
+}
+
+.nav-list {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    /* background-color: rgb(152, 41, 89);*/
+
+
+}
+
+.nav-list li {
     list-style: none;
-    margin: 0 23px;
-    font-size: 1.2rem;
-  }
-  
-#navbar ul li a {
-    display: block;
-    padding: 3px 10px;
-    border-radius: 20px;
+    padding: 26px 30px;
+
+
+}
+
+.nav-list li a {
+
     text-decoration: none;
     color: white;
-    font-family: 'Poppins', sans-serif;
-  }
-
-#navbar ul li a:hover {
-  
-    color: black;
-    background-color: white;
-    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* Home Section */
-#home {
+.rightnav {
+    width: 30%;
+    /* background-color: blueviolet;*/
+    text-align: right;
+}
 
+#search {
+    padding: 2px;
+    font-size: 17px;
+    border: 2px solid grey;
+    border-radius: 3px;
+
+}
+
+
+.background {
+    background: rgba(0, 0, 0, 0.7) url('../img/background2.jpg');
+    background-size: cover;
+    background-blend-mode: darken;
+}
+
+.box-main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    max-width: 50%;
+    margin: auto;
+    height: 90%;
+}
+
+.firstsection {
+    height: 100vh;
+}
+
+.firsthalf {
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.secondhalf {
+    width: 30%;
+}
+
+.secondhalf img {
+    width: 70%;
+    border: 4px solid rgb(179, 27, 182);
+    border-radius: 116px;
+}
+
+.text-big {
+    font-size: 50px;
+
+}
+
+.text-small {
+    font-size: 20px;
+
+}
+
+.btn {
+
+    padding: 8px 20px;
+    margin: 16px 3px;
+    border: 2px solid purple;
+    border-radius: 3px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: none;
+    color: white;
+    cursor: pointer;
+}
+
+.btn-sn {
+
+    padding: 2px 10px;
+    vertical-align: middle;
+
+
+}
+
+.section {
+ 
+    display: flex;
     align-items: center;
-    height: 550px;
-    padding: -3px 200px;
-  }
+    justify-content: space-evenly;
+    max-width: 82%;
+    margin: auto;
+    font-family: 'Ubuntu', sans-serif;
+    background-color: rgba(208, 173, 240, 0.518);
+    padding: 10px;
 
-#home::before {
+}
 
-    content: "";
-    background: url("../background2.jpg") no-repeat center center/cover;
+.section-Left {
+    flex-direction: row-reverse;
+}
 
-    background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url(../background2.jpg);
-    position: absolute;
-    height: 110%;
+.paras {
+    padding: 0px 100px;
+}
+
+.sectionsubTag {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+.thumbnail img {
+    border: 4px solid purple;
+    border-radius: 100px;
+    width: 300px;
+    margin-top: 19px;
+    margin: 0px 38px;
+}
+
+.sectionTag {
+    padding: 16px 0px;
+}
+
+.contact {
+    background-color: rgba(214, 198, 222, 0.678);
+    height: 100vh;
+
+}
+
+.text-center {
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 35px;
+    padding: 30px;
+}
+
+.form {
+    max-width: 62%;
+    margin: auto;
+}
+
+.form-input {
     width: 100%;
-    z-index: -1;
-    opacity: 1.33;
-    top: 0px;
-    left: 0px;
-  }
+    font-size: 20px;
+    border: 2px solid purple;
+    border-radius: 6px;
+    margin: 15px 0px;
+    padding: 5px 3px;
+    font-family: 'Ubuntu', sans-serif;
 
-  #home h1{
+}
+
+.btn-dark {
+    background-color: rgba(116, 42, 185, 0.649);
+    color: rgb(219, 231, 232);
+    border-radius: 35px;
+    font-family: 'Ubuntu', sans-serif;
+
+}
+
+.a {
 
     color: white;
-    text-align: center;    
-    margin-top: -20px;
-    margin-bottom: -35px;
-    font-family: 'Poppins', sans-serif;
-  }
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 20px;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+}
 
-  #home p{
+.burger {
+    display: none;
+    position: absolute;
+    cursor: pointer;
+    right: 5%;
+    top: 15px;
+}
 
-    color: white;
-    text-align: center;    
-    font-size: 1.5rem;
-    font-family: 'Poppins', sans-serif;
-  
-  }
+.line {
+    width: 33px;
+    background-color: white;
+    height: 4px;
+    margin: 5px 3px;
+
+}
+
 
 /* Services Section */
 #services{
 
-    margin: 34px;
-    display: flex;
-    color: white;
-  
-  }
-  
-  #services .box{
-  
-    border: 2px solid white;
-    padding: 34px;
-    margin: 25px 6px;
-    border-radius: 23px;
-    background-color: rgb(83, 118, 118);
-    margin-bottom: 20px;
-  }
-  
-  #services .box img{
-  
-    height: 230px;
-    margin: auto;
-    display: block;
-  }
-  
-  #services .box p{
-  
-    font-family: 'Poppins', sans-serif;
-  }
-
-/* Contact section */
-#contact{
-    position: relative;
-}
-
-#contact::before{
-
-content: "";
-position: absolute;
-width: 100%;
-height: 100%;
-z-index: -1;
-opacity: 0.7;
-background: url("../background.jpg") no-repeat center center/cover;
-
-background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url(../background.jpg);
-}
-
-#contact-box{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 34px;
-}
-#contact-box input,
-#contact-box textarea{
-    width: 100%;
-    border-radius: 9px;
-    padding: 0.5rem;
-    font-size: 1.1rem;
-}
-
-#contact-box form{
-
-    width: 40%;
+  margin: 34px;
+  display: flex;
+  color: white;
 
 }
 
-#contact-box label{
+#services .box{
 
-    font-size: 1.3rem;
-    font-family: 'Poppins', sans-serif;
-    
+  border: 2px solid white;
+  padding: 34px;
+  margin: 25px 6px;
+  border-radius: 23px;
+  background-color: rgb(83, 118, 118);
+  margin-bottom: 20px;
 }
 
+#services .box img{
 
-
-footer{
-    background-color: black;
-    color: white;
-    padding: 9px 20px;
+  height: 230px;
+  margin: auto;
+  display: block;
 }
-/* Utlity class */
+
+#services .box p{
+
+  font-family: 'Poppins', sans-serif;
+}
+
 
 .h-primary {
 
-    font-size: 3.8rem;
-    padding: 40px;
-    font-family: 'Poppins', sans-serif;
+  font-size: 3.8rem;
+  padding: 40px;
+  font-family: 'Poppins', sans-serif;
 }
 
 .h-secondary {
 
-    font-size: 2rem;
-    padding: 12px;
-    font-family: 'Poppins', sans-serif;
+  font-size: 2rem;
+  padding: 12px;
+  font-family: 'Poppins', sans-serif;
 }
-  
-.btn{
-    padding: 2px 36px;
-    background-color: white;
-    border: 2px solid white;
-    margin: 10px;
-    font-size: 1.3rem;
-    border-radius: 34px;
-    cursor: pointer;
-  }
-  
-  .btn a {
-  
-    text-decoration: none;
-    color: rgb(2, 2, 54);
-  
-  }
 
-  .center{
-    text-align: center;
-  }
-  
-  html{
-    scroll-behavior: smooth;
-  }
+.center{
+  text-align: center;
+}
+
+@media only screen and (max-width:1228px) {
+    .nav-list {
+        flex-direction: column;
+    }
+    .box-main{
+        flex-direction: column;
+        max-width: 100%;
+    }
+
+    .navbar {
+        flex-direction: column;
+        transition: all 0.7s ease-out;
+        height: 478px;
+    }
+
+    .btn-sn {
+        flex-direction: column;
+    }
+
+    .rightnav {
+
+        text-align: center;
+    }
+
+    #search {
+        width: 100%;
+    }
+    .burger{
+        display: block;
+    }
+    .h-nav-resp{
+        height: 72px;
+    }
+    .v-class-resp{
+        opacity: 0;
+    }
+    .section{
+        flex-direction: column-reverse;
+    }
+    .text-big{
+        text-align: center;
+    }
+    .text-small{
+        text-align: center;
+    }
+    .buttons{
+        text-align: center;
+    }
+    .paras{
+        padding: 0px;
+    }
+
+    
+#services{
+
+  flex-direction: column;
+
+}
+
+#services .box{
+
+  padding: 14px;
+  margin: 2px 0px;
+  margin-bottom: 20px;
+
+}
+}
