--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,6 @@ html{
 
 .increase{
 font-size: 26px;
-     justify-content: center;
-    align-items: center;
     
 }
 
@@ -343,6 +341,9 @@ font-size: 26px;
         text-align: center;
     }
     .text-small{
+        text-align: center;
+    }
+    .increase{
         text-align: center;
     }
     .buttons{
