--- a/css/style.css
+++ b/css/style.css
@@ -126,15 +126,16 @@ font-size: 26px;
 }
 
 .btn {
-
+    
     padding: 8px 20px;
-    margin: 16px 3px;
+    margin: 6px 7px;
     border: 2px solid purple;
     border-radius: 3px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: none;
     color: white;
     cursor: pointer;
+
 }
 
 .btn-sn {
@@ -203,10 +204,10 @@ font-size: 26px;
 
 .form-input {
     width: 100%;
-    font-size: 20px;
+    font-size: 17px;
     border: 2px solid purple;
     border-radius: 6px;
-    margin: 15px 0px;
+    margin: 6px 0px;
     padding: 5px 3px;
     font-family: 'Ubuntu', sans-serif;
 
@@ -283,7 +284,7 @@ font-size: 26px;
 .h-primary {
 
   font-size: 3.8rem;
-  padding: 40px;
+  padding: 20px;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -366,5 +367,23 @@ font-size: 26px;
   margin: 2px 0px;
   margin-bottom: 20px;
 
+}
+
+.form-input {
+    width: 100%;
+    font-size: 14px;
+    border: 2px solid purple;
+    border-radius: 6px;
+    margin: 5px 0px;
+    padding: 5px 3px;
+    font-family: 'Ubuntu', sans-serif;
+
+}
+
+.Logo {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 }
