--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,12 @@ font-size: 26px;
 
 
 .background {
+    background: rgba(0, 0, 0, 0.7) url('../img/background3.jpg');
+    background-size: cover;
+    background-blend-mode: darken;
+}
+
+.background2 {
     background: rgba(0, 0, 0, 0.7) url('../img/background2.jpg');
     background-size: cover;
     background-blend-mode: darken;
@@ -145,7 +151,13 @@ font-size: 26px;
 
 
 }
+.btn a {
 
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 .section {
  
     display: flex;
